--- a/web/.env.example
+++ b/web/.env.example
@@ -2,3 +2,4 @@ PORT=8080
 MODEL_PATH_VAD=/models/vad.onnx
 MODEL_PATH_PITCH=/models/crepe_tiny.onnx
 LATENCY_TARGET_MS=25
+VITE_LATENCY_TARGET_MS=25
