feat: wire realtime inference and ci pipeline

--- a/desktop/src/CMakeLists.txt
+++ b/desktop/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(DESKTOP_SOURCES
   main.cpp
   audio/DeviceManager.cpp
+  audio/PipelineProcessor.cpp
   dsp/VadProcessor.cpp
   dsp/PitchProcessor.cpp
   dsp/ConfidenceGate.cpp
@@ -11,6 +12,7 @@ set(DESKTOP_SOURCES
 
 set(DESKTOP_HEADERS
   ${CMAKE_CURRENT_LIST_DIR}/../include/audio/DeviceManager.h
+  ${CMAKE_CURRENT_LIST_DIR}/../include/audio/PipelineProcessor.h
   ${CMAKE_CURRENT_LIST_DIR}/../include/dsp/VadProcessor.h
   ${CMAKE_CURRENT_LIST_DIR}/../include/dsp/PitchProcessor.h
   ${CMAKE_CURRENT_LIST_DIR}/../include/dsp/ConfidenceGate.h
@@ -54,12 +56,19 @@ target_compile_definitions(SingWithMeApp PRIVATE
   JUCE_WEB_BROWSER=0
 )
 
-find_path(ONNXRUNTIME_INCLUDE_DIR onnxruntime_cxx_api.h HINTS ${ONNXRUNTIME_ROOT}/include ENV ONNXRUNTIME_ROOT)
-find_library(ONNXRUNTIME_LIBRARY onnxruntime HINTS ${ONNXRUNTIME_ROOT}/lib ENV ONNXRUNTIME_ROOT)
+if(ENABLE_ONNX_RUNTIME)
+  find_path(ONNXRUNTIME_INCLUDE_DIR onnxruntime_cxx_api.h HINTS ${ONNXRUNTIME_ROOT}/include ENV ONNXRUNTIME_ROOT)
+  find_library(ONNXRUNTIME_LIBRARY onnxruntime HINTS ${ONNXRUNTIME_ROOT}/lib ENV ONNXRUNTIME_ROOT)
 
-if(NOT ONNXRUNTIME_INCLUDE_DIR OR NOT ONNXRUNTIME_LIBRARY)
-  message(FATAL_ERROR "ONNX Runtime not found. Set ONNXRUNTIME_ROOT.")
+  if(NOT ONNXRUNTIME_INCLUDE_DIR OR NOT ONNXRUNTIME_LIBRARY)
+    message(FATAL_ERROR "ONNX Runtime not found. Set ONNXRUNTIME_ROOT or disable ENABLE_ONNX_RUNTIME.")
+  endif()
+
+  target_compile_definitions(SingWithMeApp PRIVATE SINGWITHME_ONNX_RUNTIME=1)
+  target_include_directories(SingWithMeApp PRIVATE ${ONNXRUNTIME_INCLUDE_DIR})
+  target_link_libraries(SingWithMeApp PRIVATE ${ONNXRUNTIME_LIBRARY} juce::juce_gui_extra)
+else()
+  message(WARNING "Building without ONNX Runtime support; inference will be disabled.")
+  target_compile_definitions(SingWithMeApp PRIVATE SINGWITHME_ONNX_RUNTIME=0)
+  target_link_libraries(SingWithMeApp PRIVATE juce::juce_gui_extra)
 endif()
-
-target_include_directories(SingWithMeApp PRIVATE ${ONNXRUNTIME_INCLUDE_DIR})
-target_link_libraries(SingWithMeApp PRIVATE ${ONNXRUNTIME_LIBRARY} juce::juce_gui_extra)
