--- a/web/.env.example
+++ b/web/.env.example
@@ -3,3 +3,5 @@ MODEL_PATH_VAD=/models/vad.onnx
 MODEL_PATH_PITCH=/models/crepe_tiny.onnx
 LATENCY_TARGET_MS=25
 VITE_LATENCY_TARGET_MS=25
+VITE_MODEL_PATH_VAD=/models/vad.onnx
+VITE_MODEL_PATH_PITCH=/models/crepe_tiny.onnx
