--- a/desktop/CMakeLists.txt
+++ b/desktop/CMakeLists.txt
@@ -3,6 +3,7 @@ project(SingWithMeDesktop VERSION 0.1.0 LANGUAGES CXX)
 
 option(ENABLE_ASIO "Enable ASIO support on Windows" ON)
 option(ENABLE_GPU "Enable GPU acceleration for ONNX Runtime" OFF)
+option(ENABLE_ONNX_RUNTIME "Enable ONNX Runtime inference" ON)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
