--- a/web/.env.example
+++ b/web/.env.example
@@ -5,3 +5,5 @@ LATENCY_TARGET_MS=25
 VITE_LATENCY_TARGET_MS=25
 VITE_MODEL_PATH_VAD=/models/vad.onnx
 VITE_MODEL_PATH_PITCH=/models/crepe_tiny.onnx
+VITE_INSTRUMENT_URL=/media/instrument.mp3
+VITE_GUIDE_URL=/media/guide.mp3
