--- a/web/package.json
+++ b/web/package.json
@@ -4,19 +4,23 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "ts-node --esm --project tsconfig.node.json server/index.ts",
     "build": "tsc -p tsconfig.node.json && vite build",
-    "preview": "vite preview",
-    "start": "node dist/server/index.js",
+    "preview": "ts-node --esm --project tsconfig.node.json server/index.ts",
+    "start": "ts-node --esm --project tsconfig.node.json server/index.ts",
     "lint": "eslint . --ext .ts,.tsx"
   },
   "dependencies": {
+    "express": "4.21.2",
+    "multer": "^2.0.2",
     "onnxruntime-web": "^1.18.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.11.30",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.1",
@@ -27,7 +31,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
+    "ts-node": "10.9.2",
     "typescript": "^5.4.5",
     "vite": "^5.1.4"
-  }
+  },
+  "packageManager": "pnpm@8.7.5"
 }
