--- a/web/package.json
+++ b/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sing-with-me-web",
+  "name": "tunetrix-web",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -16,6 +16,7 @@
     "onnxruntime-web": "^1.18.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "stripe": "^16.6.0",
     "soundtouchjs": "^0.2.1",
     "zustand": "^4.5.4"
   },
