--- a/web/package.json
+++ b/web/package.json
@@ -13,11 +13,11 @@
   "dependencies": {
     "express": "4.21.2",
     "multer": "^2.0.2",
+    "nodemailer": "^6.10.1",
     "onnxruntime-web": "^1.18.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "stripe": "^16.6.0",
-    "soundtouchjs": "^0.2.1",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
