docs: document waitlist SMTP env

--- a/web/.env.example
+++ b/web/.env.example
@@ -5,5 +5,18 @@ LATENCY_TARGET_MS=25
 VITE_LATENCY_TARGET_MS=25
 VITE_MODEL_PATH_VAD=/models/vad.onnx
 VITE_MODEL_PATH_PITCH=/models/crepe_tiny.onnx
-VITE_INSTRUMENT_URL=/media/instrument.mp3
-VITE_GUIDE_URL=/media/guide.mp3
+VITE_INSTRUMENT_URL=/media/light-ghost-instrument.wav
+VITE_GUIDE_URL=/media/light-ghost-guide.wav
+# VITE_ANDROID_WAITLIST_URL=/api/waitlist
+
+# SMTP configuration for waitlist email delivery
+# SMTP_URL=smtp://user:pass@smtp.example.com:587
+# Alternatively configure host/port/auth manually:
+# SMTP_HOST=smtp.example.com
+# SMTP_PORT=587
+# SMTP_USER=
+# SMTP_PASSWORD=
+# SMTP_SECURE=false
+WAITLIST_TO_EMAIL=you@example.com
+WAITLIST_FROM_EMAIL=public-sender@example.com
+# WAITLIST_SUBJECT=Android waitlist signup
