feat(waitlist): persist signups to postgres

--- a/web/.env.example
+++ b/web/.env.example
@@ -9,6 +9,10 @@ VITE_INSTRUMENT_URL=/media/light-ghost-instrument.wav
 VITE_GUIDE_URL=/media/light-ghost-guide.wav
 # VITE_ANDROID_WAITLIST_URL=/api/waitlist
 
+# Postgres connection string
+DATABASE_URL=postgres://username:password@hostname:5432/database
+# DATABASE_SSL=true
+
 # SMTP configuration for waitlist email delivery
 # SMTP_URL=smtp://user:pass@smtp.example.com:587
 # Alternatively configure host/port/auth manually:
